syntax = "proto3";

package user;

service User{
  rpc UserIndex(UserIndexRequest) returns (UserIndexResponse){}
}


// 用户实体模型
message UserEntity {
  string name = 1;
  int32 age = 2;
}

message UserIndexRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message UserIndexResponse {
  int32 err = 1;
  string msg = 2;
  // 返回一个 UserEntity 对象的列表数据
  repeated UserEntity data = 3;
}